midiSequencerInputUnit/Firmware/build/log/idf_py_stdout_output_8255
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/build/bootloader/esp-idf/esptool_py && /home/synth002/.espressif/python_env/idf5.0_py3.10_env/bin/python /home/synth002/esp/esp-idf-v5.0/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/build/bootloader/bootloader.bin
Bootloader binary size 0x55d0 bytes. 0x2a30 bytes (33%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/synth002/.espressif/tools/xtensa-esp32s3-elf/esp-2022r1-11.2.0/xtensa-esp32s3-elf/bin/xtensa-esp32s3-elf-gcc  -I/home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/build/config -I/home/synth002/esp/esp-idf-v5.0/components/newlib/platform_include -I/home/synth002/esp/esp-idf-v5.0/components/freertos/FreeRTOS-Kernel/include -I/home/synth002/esp/esp-idf-v5.0/components/freertos/esp_additions/include/freertos -I/home/synth002/esp/esp-idf-v5.0/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/synth002/esp/esp-idf-v5.0/components/freertos/esp_additions/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_hw_support/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_hw_support/include/soc -I/home/synth002/esp/esp-idf-v5.0/components/esp_hw_support/include/soc/esp32s3 -I/home/synth002/esp/esp-idf-v5.0/components/esp_hw_support/port/esp32s3/. -I/home/synth002/esp/esp-idf-v5.0/components/esp_hw_support/port/esp32s3/private_include -I/home/synth002/esp/esp-idf-v5.0/components/heap/include -I/home/synth002/esp/esp-idf-v5.0/components/log/include -I/home/synth002/esp/esp-idf-v5.0/components/soc/include -I/home/synth002/esp/esp-idf-v5.0/components/soc/esp32s3/. -I/home/synth002/esp/esp-idf-v5.0/components/soc/esp32s3/include -I/home/synth002/esp/esp-idf-v5.0/components/hal/esp32s3/include -I/home/synth002/esp/esp-idf-v5.0/components/hal/include -I/home/synth002/esp/esp-idf-v5.0/components/hal/platform_port/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_rom/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_rom/include/esp32s3 -I/home/synth002/esp/esp-idf-v5.0/components/esp_rom/esp32s3 -I/home/synth002/esp/esp-idf-v5.0/components/esp_common/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_system/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_system/port/soc -I/home/synth002/esp/esp-idf-v5.0/components/esp_system/port/include/private -I/home/synth002/esp/esp-idf-v5.0/components/xtensa/include -I/home/synth002/esp/esp-idf-v5.0/components/xtensa/esp32s3/include -I/home/synth002/esp/esp-idf-v5.0/components/lwip/include -I/home/synth002/esp/esp-idf-v5.0/components/lwip/include/apps -I/home/synth002/esp/esp-idf-v5.0/components/lwip/include/apps/sntp -I/home/synth002/esp/esp-idf-v5.0/components/lwip/lwip/src/include -I/home/synth002/esp/esp-idf-v5.0/components/lwip/port/esp32/include -I/home/synth002/esp/esp-idf-v5.0/components/lwip/port/esp32/include/arch -I/home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/components/system/include -I/home/synth002/esp/esp-idf-v5.0/components/nvs_flash/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_partition/include -I/home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/components/ipsDisplay/include -I/home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/components/rotaryEncoders/include -I/home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/components/guiMenu/include -I/home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/components/switchMatrix/include -I/home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/components/ledDrivers/include -I/home/synth002/esp/esp-idf-v5.0/components/driver/include -I/home/synth002/esp/esp-idf-v5.0/components/driver/deprecated -I/home/synth002/esp/esp-idf-v5.0/components/driver/esp32s3/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_pm/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_ringbuf/include -I/home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/components/fileSys/include -I/home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/components/esp_littlefs/include -I/home/synth002/esp/esp-idf-v5.0/components/vfs/include -I/home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/components/bleCentralClient/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/include/esp32s3/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/common/osi/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/common/api/include/api -I/home/synth002/esp/esp-idf-v5.0/components/bt/common/btc/profile/esp/blufi/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/common/btc/profile/esp/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/services/ans/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/services/bas/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/services/dis/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/services/gap/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/services/gatt/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/services/ias/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/services/ipss/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/services/lls/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/services/tps/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/util/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/store/ram/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/store/config/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/porting/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/porting/nimble/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/port/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/porting/npl/freertos/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/esp-hci/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_timer/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_wifi/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_event/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_phy/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_phy/esp32s3/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_netif/include -I/home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/components/midi/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware=. -fmacro-prefix-map=/home/synth002/esp/esp-idf-v5.0=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/main/main.c
In file included from /home/synth002/.espressif/tools/xtensa-esp32s3-elf/esp-2022r1-11.2.0/xtensa-esp32s3-elf/xtensa-esp32s3-elf/sys-include/sys/reent.h:503,
                 from /home/synth002/esp/esp-idf-v5.0/components/newlib/platform_include/sys/reent.h:9,
                 from /home/synth002/.espressif/tools/xtensa-esp32s3-elf/esp-2022r1-11.2.0/xtensa-esp32s3-elf/xtensa-esp32s3-elf/sys-include/stdio.h:60,
                 from /home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/main/main.c:4:
/home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/main/main.c: In function 'app_main':
/home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/main/main.c:34:37: error: 'ESP_INTR_FLAG_DEFAULT' undeclared (first use in this function); did you mean 'ESP_INTR_FLAG_LEVEL3'?
   34 |     assert(gpio_install_isr_service(ESP_INTR_FLAG_DEFAULT) == ESP_OK);
      |                                     ^~~~~~~~~~~~~~~~~~~~~
/home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/main/main.c:34:37: note: each undeclared identifier is reported only once for each function it appears in
At top level:
/home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/main/main.c:45:13: warning: 'setSystemLED' defined but not used [-Wunused-function]
   45 | static void setSystemLED(uint8_t led, bool isOnOff)
      |             ^~~~~~~~~~~~
ninja: build stopped: subcommand failed.
